# cubzh

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  BUILD.md  CONTRIBUTING.md  MODULE.bazel  NOTICE  README.md  WORKSPACE  cubzh-file-format-3zh.txt  dagger.json
.dagger/: main.go
.github/: dagger.json  go.mod  main.go
.github/workflows/: apply_format.yml  ci.yml  core-clang-format.yml  core-unit-tests.yml  lua-modules-linter.yml  lua_docs_deploy_prod.yml
bundle/: config.json  notif.caf  notif_money.caf
bundle/fonts/: pixel.txt
bundle/luacheck/: check.lua  format.lua  init.lua
bundle/shapes/: alert_badge.3zh  arrow_up.3zh  avatar.3zh  chest.3zh  cube.3zh  cube_selector.3zh  cube_white.3zh  cubzh.3zh  cubzh_logo_b.3zh  default_hair.3zh  default_jacket.3zh  default_pants.3zh  default_shoes.3zh  emojim.3zh  friends_icon.3zh  giraffe_head.3zh  head_skin2_v2.3zh  heart.3zh  paint_set.3zh  patternboots.3zh  patternhair.3zh  pezh_coin_2.3zh  pizza_slice.3zh  scale_handle.3zh  shoes_template.3zh  smartphone.3zh  spaceship_2.3zh  sword.3zh  textbubble.3zh  ui_pointer_arrow.3zh  world_icon.3zh
ci/: README.md  githubStatus.go  go.mod  main.go
ci/core_unit_tests/: go.mod  go.sum  main.go
ci/format/: go.mod  go.sum  main.go
ci/lua_docs_deploy_prod/: go.mod  go.sum  main.go
cli/: blocks.cpp  blocks.hpp  combine.cpp  combine.hpp  main.cpp  shape_point.cpp  shape_point.hpp
cli/cmake/: CMakeLists.txt  Dockerfile  README.md
core/: .clang-format  .gitignore  Makefile  asset.h  block.c  block.h  blockChange.c  blockChange.h  box.c  box.h  camera.c  camera.h  cclog.c  cclog.h  chunk.c  chunk.h  color_atlas.c  color_atlas.h  color_palette.c  color_palette.h  colors.c  colors.h  config.c  config.h  doubly_linked_list.c  doubly_linked_list.h  doubly_linked_list_uint8.c  doubly_linked_list_uint8.h  easings.c  easings.h  fifo_list.c  fifo_list.h  filo_list.c  filo_list.h  filo_list_float3.c  filo_list_float3.h  filo_list_int3.c  filo_list_int3.h  filo_list_uint16.c  filo_list_uint16.h  (+82 more)
core/tests/: CMakeLists.txt  README.md  acutest.h  cubzhCoreUnitTests.Dockerfile  main.c  test_block.h  test_blockChange.h  test_box.h  test_chunk.h  test_color_atlas.h  test_config.h  test_doubly_linked_list.h  test_doubly_linked_list_uint8.h  test_fifo_list.h  test_filo_list.h  test_filo_list_float3.h  test_filo_list_int3.h  test_filo_list_uint16.h  test_filo_list_uint32.h  test_float3.h  test_float4.h  test_flood_fill_lighting.h  test_hash_uint32_int.h  test_inputs.h  test_int3.h  test_list.c  test_map_string_float3.h  test_matrix4x4.h  test_quaternion.h  test_rtree.h  test_shape.h  test_stream.h  test_transaction.h  test_transform.h  test_utils.h  test_vertexbuffer.h  test_weakptr.h
core/tests/cmake/: CMakeLists.txt
core/tests/visual_studio/: Cubzh Core Unit Tests.sln  Cubzh Core Unit Tests.vcxproj  Cubzh Core Unit Tests.vcxproj.filters
core/tests/xcode/unit_tests.xcodeproj/: project.pbxproj
core/tests/xcode/unit_tests.xcodeproj/xcuserdata/gaetan.xcuserdatad/xcschemes/: xcschememanagement.plist
dagger/: go.mod  go.sum  main.go
dockerfiles/: luadev.Dockerfile  ubuntu_build_env.Dockerfile
dockerfiles/cpp-build-env/: Dockerfile
editions/dojo/: dojo.hpp
i18n/: es.json  fr.json  it.json  pl.json  pt.json  ru.json  ua.json
i18n/generate/: go.mod  main.go
lua/docs/: Dockerfile  README.md  dev.sh  docker-compose-dev.yml  docker-compose-run.yml  docker-compose-test.yml  docker-compose.yml  run.sh  stop.sh  test.sh
lua/modules/: .luacheckrc  .stylua.toml  README.md  ai.lua  ai_ambience.lua  alert.lua  ambience.lua  animations.lua  api.lua  avatar.lua  avatar_editor.lua  box_gizmo.lua  box_outline.lua  bundle.lua  camera_modes.lua  ccc.lua  chat.lua  cleanup.lua  coins.lua  collectible.lua  colorpicker.lua  config.lua  controls.lua  create_menu.lua  creations.lua  crosshair.lua  cubzh.lua  (+98 more)
misc/: wrapper.html
shaders/: .gitignore  README.md  cs_clouds_indirect.sc  cs_clouds_update.sc  fs_blit_common.sh  fs_blit_fallback.sc  fs_blit_variant_alpha.sc  fs_blit_variant_mrt.sc  fs_blit_variant_mrt_alpha.sc  fs_blit_variant_mrt_alpha_ldepth.sc  fs_blit_variant_mrt_ldepth.sc  fs_clear.sc  fs_clear_tex_cutout.sc  fs_color_common.sh  fs_color_fallback.sc  fs_color_variant_lpass.sc  fs_color_variant_lpass_ldepth.sc  fs_color_variant_lpass_pbr.sc  fs_color_variant_lpass_pbr_ldepth.sc  fs_deferred_light_common.sh  fs_deferred_light_variant_directional.sc  fs_deferred_light_variant_directional_ldepth.sc  fs_deferred_light_variant_directional_ldepth_sm1.sc  fs_deferred_light_variant_directional_ldepth_sm1_soft.sc  fs_deferred_light_variant_directional_ldepth_sm1_soft_ss.sc  fs_deferred_light_variant_directional_ldepth_sm1_ss.sc  fs_deferred_light_variant_directional_ldepth_sm2.sc  fs_deferred_light_variant_directional_ldepth_sm2_soft.sc  fs_deferred_light_variant_directional_ldepth_sm2_soft_ss.sc  fs_deferred_light_variant_directional_ldepth_sm2_ss.sc  fs_deferred_light_variant_directional_ldepth_sm4.sc  fs_deferred_light_variant_directional_ldepth_sm4_soft.sc  fs_deferred_light_variant_directional_ldepth_sm4_soft_ss.sc  fs_deferred_light_variant_directional_ldepth_sm4_ss.sc  fs_deferred_light_variant_directional_pbr.sc  fs_deferred_light_variant_directional_pbr_ldepth.sc  fs_deferred_light_variant_directional_pbr_ldepth_sm1.sc  fs_deferred_light_variant_directional_pbr_ldepth_sm1_soft.sc  fs_deferred_light_variant_directional_pbr_ldepth_sm2.sc  fs_deferred_light_variant_directional_pbr_ldepth_sm2_soft.sc  (+243 more)
tools/: conditional.bzl
wasm/: BUILD  README.txt  run_server.sh  run_server_dev.ps1  run_server_dev.sh  run_server_dev_web.ps1  run_server_dev_web.sh  wasm.Dockerfile  wasm.Dockerfile.dockerignore  wasm_README.md  wrapper.html  wrapper_credentialless.html
wasm/Particubes/: CMakeLists.txt  bgfx.cmake  build.sh  build_huggingface.sh  clean.sh  grpc.cmake  lpng.cmake  shell_production.html  vx-wrapper-post-js.js  vx-wrapper.cpp  xptools.cmake
wasm/Particubes/cmake/: bgfx.cmake  bimg.cmake  bx.cmake  examples.cmake  shared.cmake  tools.cmake
wasm/Particubes/cmake/tools/: shaderc.cmake
(+177 files in other folders)
