# ------------------------------
# Platforms
# ------------------------------

# Android
platform(
    name = "android_arm",
    constraint_values = [
        "@platforms//os:android",
        "@platforms//cpu:armv7",
    ],
)
platform(
    name = "android_arm64",
    constraint_values = [
        "@platforms//os:android",
        "@platforms//cpu:arm64",
    ],
)
platform(
    name = "android_x86",
    constraint_values = [
        "@platforms//os:android",
        "@platforms//cpu:x86_32",
    ],
)

platform(
    name = "android_x86_64",
    constraint_values = [
        "@platforms//os:android",
        "@platforms//cpu:x86_64",
    ],
)

# ------------------------------
# iOS
# ------------------------------

platform(
    name = "ios_arm64",
    constraint_values = [
        "@platforms//os:ios",
        "@platforms//cpu:arm64",
    ],
)

# ------------------------------
# macOS
platform(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)
platform(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

# Windows


# # Define the condition for macOS
# config_setting(
#     name = "is_macos",
#     values = {"host_os": "darwin"},
# )

# # Define the condition for non-macOS (for completeness)
# config_setting(
#     name = "is_not_macos",
#     values = {"host_os": "linux"},  # adjust this for other OS if needed
# )

platform(
    name = "macos_universal",
    constraint_values = [
        "@platforms//os:macos",
    ],
)

platform(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

platform(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

# ------------------------------
# Windows
# ------------------------------

platform(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

# ------------------------------
# Linux
# ------------------------------

platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

# ------------------------------
# Web
# ------------------------------

platform(
    name = "wasm_wasm32",
    constraint_values = [
        "@platforms//os:emscripten",
        "@platforms//cpu:wasm32",
    ],
)

platform(
    name = "wasm_wasm64",
    constraint_values = [
        "@platforms//os:emscripten",
        "@platforms//cpu:wasm64",
    ],
)
