##
## MODULE.bazel
##

###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "cubzh",
)

bazel_dep(name = "platforms", version = "0.0.10")
# bazel_dep(name = "zlib", version = "1.3.1")
